--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,3 +1,18 @@
-﻿<header>
-    <h1>Welcome to the HN .Net MVC pratical work</h1>
-</header>
+﻿@{
+    Layout = "~/Views/Shared/Layout.cshtml";
+    ViewData["Title"] = "Bienvenue au TP HN";
+    ViewData["CurrentPage"] = "Home";
+}
+
+
+    
+
+    
+    <section>
+        <p>
+            <a href="/Home/Index/Form">Remplir le formulaire </a>
+        </p>
+    </section>
+
+
+
